# doc-engine-cli

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish-docker.yml  publish-pypi.yml
doc_engine/: __init__.py  __main__.py  cli.py  compiler.py  converter.py  core.py  linter.py
doc_engine/templates/: academic.typ  book.typ  minimal.typ  modern.typ  report.typ  technical.typ
tests/: test_cli.py  test_converter.py  test_linter.py
